fix (PSTB-4685): improve misaligned and underlined tabs

--- a/components/TabMenu/style.css
+++ b/components/TabMenu/style.css
@@ -46,6 +46,7 @@
     border-bottom: 1px solid #D7D6D6;
     cursor: pointer;
     color: #373a3c;
+    text-decoration: none;
     width: 100%;
     height: 100%;
 }
@@ -67,6 +68,7 @@ a.tabMenuWrap:hover.tabMenuWrapSelected,
     color: var(--ut-front-react-standardTabMenuColor);
 }
 .tabMenuWrap .tabMenuItemContent {
+    line-height: 1.5;
     padding: 10px 29px 10px 10px;
 }
 .tabMenuWrapSelected {
